--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <h3>
             Use case
           </h3>
-          <p>The sample application has three services namely service-one, service-two and service-three. Each of the service has its own database service-one-db, service-two-db and service-three-db respectively. During the startup of the services, it persists the service name and an auto generated UUID in its perspective database and sends the data to the RabbitMQ exchange which then broadcasts the data to all the queues based on the routing key. Every microservices listens to its own RabbitMQ queue and keeps updating the database as and when it receives the data.</p>
+          <p>The sample application has three services named service-one, service-two and service-three. Each of the service has its own database service-one-db, service-two-db and service-three-db respectively. During the startup of the services, it persists the service name and an auto generated UUID in its perspective database and sends the data to the RabbitMQ exchange which then broadcasts the data to all the queues based on the routing key. Every microservices listens to its own RabbitMQ queue and keeps updating the database as and when it receives the data.</p>
           <p>Below are the screens of the application.</p>
           <p><a href="https://github.com/vmudigal/microservices-sample/blob/master/documents/app-screens/01.%20Home.png?raw=true" target="_blank"><img src="https://github.com/vmudigal/microservices-sample/raw/master/documents/app-screens/01.%20Home.png?raw=true" alt="alt tag" style="max-width:100%;"></a></p>
           <p>Click on one of the tab's (one, two or three) the data that you see on the screen is based on the data fetched by the respective service by calling its database.</p>
